--- a/css/hero.css
+++ b/css/hero.css
@@ -19,3 +19,11 @@
     flex-direction: column;
     align-items: flex-start;
 }
+
+@media screen and (max-width:820px) {
+
+}
+
+@media screen and (max-width:480px) {
+
+}
