--- a/css/nav.css
+++ b/css/nav.css
@@ -1,6 +1,8 @@
 nav {
     display: flex;
     position: sticky; 
+    width: 100%;
+    align-items: center;
     justify-content: center;
     top: 0;
     height: 15vh;
@@ -9,12 +11,11 @@ nav {
 }
 nav .container {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
-    width: 90%;
+    width: 100%;
     max-width: 1200px;
     text-align: center;
-    padding: 1rem;
 }
 nav .logo {
     width: 90px;
