--- a/css/styles.css
+++ b/css/styles.css
@@ -97,37 +97,7 @@ section {
 }
 
 /* Tablet */
-/* @media screen and (max-width:820px) {
-    nav {
-        background-color: white;
-    }
-    nav .container ul li {
-        font-size: 1.1rem;
-    }
-    #home {
-        padding: 0 5vw 0 5vw;
-    }
-    #home h1 {
-        font-size: 8rem;
-    }
-    #about {
-        height: auto;
-        padding: 8vh 10vw 0 10vw;
-    }
-    #about .aboutMeContent {
-        flex-direction: column;
-    }
-    #about .aboutMeContent .left, 
-    #about .aboutMeContent .right {
-        width: 100%; 
-        padding: 0;
-    } 
-    #about .right h3 {
-        font-size: 1.25rem;
-    }
-    #about form {
-        margin: 20px 0 20px 0;
-    }
+@media screen and (max-width:820px) {
     #projects {
         padding-top: 100px;
     }
@@ -160,24 +130,8 @@ section {
         width: 50%;
         justify-content: space-around;
     }
-    #contact {
-        height: auto;
-        padding: 4rem;
-    }
-    #contact h1 {
-        margin-bottom: 1rem;
-    }
-    #contact .wide .left {
-        width: 40%;
-    }
-    #contact .wide .right {
-        width: 60%;
-    }
-    #contact form input,
-    #contact form textarea {
-        margin: .625rem 0;
-    }
-} */
+    
+}
 /* iPhone */
 /* @media screen and (max-width:480px) {
     nav .container {
@@ -240,30 +194,7 @@ section {
     #projects .projectContainer .projectCard .project-btns {
         width: 100%;
     }
-    #contact {
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        padding: 2rem;
-    }
-    #contact h1 {
-        font-size: 4rem;
-        margin-bottom: 0;
-    }
-    #contact .wide{
-        flex-direction: column;
-    }
-    #contact .wide .left {
-        width: 100%;
-        align-items: center;
-    }
-    #contact .wide .left  img {
-        width: 80%;
-    }
-    #contact .wide .right { 
-        width: 100%;
-        margin: 2rem 0 0 0;
-    }
+    
 } */
 
 
