--- a/css/about.css
+++ b/css/about.css
@@ -6,23 +6,16 @@
     justify-content: space-between;
     align-items: center;
     position: relative;
-    /* background-color: var(--clr-primary-200); */
     padding-top:175px;
     height: auto;
 }
 
-#about h1 {
-    font-family: 'Southam Demo';
-    font-size: 5rem;
-    font-weight: lighter;
-    color: var(--clr-primary-400);
-}
 #about .aboutMeContent{
     display: flex; 
     flex-direction: column;
     width: 100%;
     margin-top: 30px;
-    line-height: 24px;
+   
     color: var(--clr-primary-900);
 }
 #about img {
@@ -48,4 +41,15 @@ button:hover {
 }
 #about button:active {
     transform: translateY(4px);
+}
+
+@media screen and (max-width:820px) {
+    
+}
+
+@media screen and (max-width:480px) {
+
+    #about h3 {
+        margin: 1rem 0;
+    }
 }
