--- a/css/fonts.css
+++ b/css/fonts.css
@@ -19,7 +19,10 @@
 /* =========================================================*/
 /*                         TYPE SCALE                       */
 /* =========================================================*/
-p {margin-bottom: 1rem;}
+p {
+    margin-bottom: 1rem;
+    line-height: 1.5;
+}
 
 h1, h2, h3, h4, h5 {
     font-weight: 400;
