--- a/css/hero.css
+++ b/css/hero.css
@@ -21,9 +21,18 @@
 }
 
 @media screen and (max-width:820px) {
-
+    #home .hero {
+        width: 100%;
+    }
 }
 
 @media screen and (max-width:480px) {
-
+    
+    #home h1.hero-name {
+        font-size: 6rem;
+        line-height: 1.5;
+    }
+    #home h2 {
+        font-size: 1.777rem;
+    }
 }
