--- a/css/nav.css
+++ b/css/nav.css
@@ -11,11 +11,12 @@ nav {
 }
 nav .container {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
     width: 100%;
     max-width: 1200px;
     text-align: center;
+    margin: 0 2rem;
 }
 nav .logo {
     width: 90px;
@@ -54,4 +55,14 @@ nav .container ul li.active {
 nav .container ul li.active a {
     /* Hover button text color */
     color: white;
+}
+
+
+@media screen and (max-width:480px) {
+    nav .container {
+        width: 100vw;
+    }
+    nav ul {
+        display: none;
+    }
 }
