--- a/css/styles.css
+++ b/css/styles.css
@@ -98,103 +98,19 @@ section {
 
 /* Tablet */
 @media screen and (max-width:820px) {
-    #projects {
-        padding-top: 100px;
+    section {
+        padding: 0 12vw;
     }
-    #projects .projectContainer {
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-    }
-    #projects .projectContainer .projectCard {
-        width: 90%;
-        height: auto;
-    }
-    #projects .projectContainer .projectCard img {
-        width: 50%;
-        height: fit-content;
-        margin-bottom: 1rem;
-    }
-    #projects .projectContainer .projectCard p,
-    #projects .projectContainer .projectCard a {
-        margin-bottom: 1rem;
-    }
-    #projects .projectContainer .projectCard .tablet-project {
-        display: flex;
-        height: 225px;
-    }
-    #projects .projectContainer .projectCard .project-description {
-         margin-left: 2rem;
-    }
-    #projects .projectContainer .projectCard .project-btns {
-        width: 50%;
-        justify-content: space-around;
-    }
+    
+
     
 }
 /* iPhone */
-/* @media screen and (max-width:480px) {
-    nav .container {
-        background-color: white;
-        width: 100vw;
-    }
-    nav ul {
-        display: none;
-    }
-    #home h1 {
-        font-size: 4.75rem;
-        font-weight: 400;
-    }
-    #home p {
-        font-size: 1.5rem;
-    }
-    #about {
-        height: auto;
-        padding: 4rem 6vw 0 6vw;
-    }
-    #about .aboutMeContent p {
-        font-size: 1.125rem;
-    }
-    #about .aboutMeContent h3 {
-        line-height: 2rem;
-    }
-    #about .aboutMeContent h3.tagline {
-        font-size: 1.25rem;
-    }
-    #about form {
-        margin: 20px 0 20px 0;
-    }
-    #projects {
-        align-items: center;
-        height: auto;
-        padding: 3rem 0;
-    }
-    #projects .projectContainer {
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;  
-    }
-    #projects .projectContainer .projectCard .tablet-project {
-        flex-direction: column;
-        height: auto;
-        margin: 0 0 1rem 0;
-    }
-    #projects .projectContainer .projectCard .tablet-project .project-description {
-        margin: 0;
-    }
-    #projects .projectContainer .projectCard img {
-        width: 100%;
-        margin: 1.25rem 0;
-    }
-    #projects .projectCard a {
-        width: fit-content;
-        text-align: center;
-        font-size: 1rem;
-    }
-    #projects .projectContainer .projectCard .project-btns {
-        width: 100%;
+@media screen and (max-width:480px) {
+    section {
+        padding: 0 10vw;
     }
     
-} */
+}
 
 
