--- a/css/about.css
+++ b/css/about.css
@@ -44,7 +44,9 @@ button:hover {
 }
 
 @media screen and (max-width:820px) {
-    
+    #about h1.cursive-heading {
+        font-size: 4.209rem;
+    }
 }
 
 @media screen and (max-width:480px) {
