added wavey background

--- a/css/about.css
+++ b/css/about.css
@@ -1,36 +1,38 @@
 /* =========================================================*/
 /*                          ABOUT                           */
 /* =========================================================*/
+
 #about {
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
     position: relative;
-    padding-top:175px;
     height: auto;
+    background-color: #556d68;
 }
 
 #about .aboutMeContent{
     display: flex; 
     flex-direction: column;
     width: 100%;
-    margin-top: 30px;
-   
     color: var(--clr-primary-900);
 }
 #about img {
     width: 16rem;
     margin: 2rem 0;
 }
+#about h4 {
+    margin-bottom: .75rem;
+}
 button {
     border: none; 
     margin: 20px 0 20px 0;
     padding: 10px;
-    color: white;
+    color: var(--clr-primary-900);
     font: var(--ff-body);
     width: fit-content;
     transition: background-color 0.5s ease, filter 0.2s ease-in-out, transform 0.2s;
-    background-color: var(--clr-primary-400);
+    background-color: #e3dea4;
     border-radius: 5px;
 }
 button:hover {
