--- a/css/contact.css
+++ b/css/contact.css
@@ -6,6 +6,7 @@
     justify-content: center;
     align-items: center;
     height: 75vh;
+    background-color: var(--clr-primary-200);
 }
 #contact .wide {
     flex-direction: row;
