--- a/css/fonts.css
+++ b/css/fonts.css
@@ -23,6 +23,9 @@ p {
     margin-bottom: 1rem;
     line-height: 1.5;
 }
+.white-font {
+    color: var(--clr-primary-200);
+}
 
 h1, h2, h3, h4, h5 {
     font-weight: 400;
@@ -39,6 +42,12 @@ h1.cursive-heading {
     font-family: 'Southam Demo';
     font-weight: lighter;
     color: var(--clr-primary-400);
+}
+h1.cursive-heading.white-font {
+    font-size: 5.5rem;
+    font-family: 'Southam Demo';
+    font-weight: lighter;
+    color: var(--clr-primary-200);
 }
 h1 {
   margin-top: 0;
