--- a/css/hero.css
+++ b/css/hero.css
@@ -2,7 +2,13 @@
 /*                           HOME                           */
 /* =========================================================*/
 #home {
-    height: 85vh;
+    height: 65vh;
+    position: relative;
+}
+#home .line {
+    height: 1px; 
+    width: 100px; 
+    background-color: black;
 }
 #home p {
     font-size: 1.75rem;
@@ -13,21 +19,24 @@
 
 #home .hero {
     display: flex;
-    position: relative;
-    width: 75%;
+    position: fixed;
+    width: 50%;
     max-width: 1200px;
     flex-direction: column;
     align-items: flex-start;
+    z-index: -10;
 }
 
 @media screen and (max-width:820px) {
     #home .hero {
-        width: 100%;
+        width: 70%;
     }
 }
 
 @media screen and (max-width:480px) {
-    
+    #home {
+        height: 100vh;
+    }
     #home h1.hero-name {
         font-size: 6rem;
         line-height: 1.5;
