--- a/css/fonts.css
+++ b/css/fonts.css
@@ -39,6 +39,7 @@ h1.hero-name {
 }
 h1.cursive-heading {
     font-size: 5.5rem;
+    margin-bottom: 1rem;
     font-family: 'Southam Demo';
     font-weight: lighter;
     color: var(--clr-primary-400);
