--- a/css/hero.css
+++ b/css/hero.css
@@ -4,7 +4,8 @@
 #home {
     height: 65vh;
     position: relative;
-}
+    align-items: center;
+} 
 #home p {
     font-size: 1.75rem;
 }
@@ -18,6 +19,7 @@
     width: 50%;
     max-width: 1200px;
     flex-direction: column;
+    justify-content: flex-start;
     align-items: flex-start;
     z-index: -10;
 }
@@ -27,10 +29,9 @@
         width: 70%;
     }
 }
-
 @media screen and (max-width:480px) {
     #home {
-        height: 70vh;
+        height: 60vh;
     }
     #home h1.hero-name {
         font-size: 6rem;
