--- a/css/projects.css
+++ b/css/projects.css
@@ -20,7 +20,7 @@
 }
 .projectCard { 
     display: flex;
-    width: 350px;
+    width: 325px;
     height: 575px;
     padding: 1rem;
     flex-direction: column;
@@ -31,11 +31,11 @@
 .projectCard a {
     /* Make button as wide as text inside it */
     width: fit-content;
-    padding: 10px; 
+    padding: 10px;
     margin: 0;
     background-color: var(--clr-primary-400);
     text-decoration: none;
-    color: white;
+    color: var(--clr-primary-200);
     border-radius: 5px;
     transition: background-color .2s ease-in-out,
                 transform .2s ease-in-out;
@@ -68,8 +68,10 @@
 .projectCard .project-btns {
     display: flex;
     width: 100%;
-    justify-content: space-evenly;
-    align-items: center;
+    justify-content: flex-start;
+}
+.projectCard .project-btns a {
+    margin-right: 1rem;
 }
 
 @media screen and (max-width:820px) {
