--- a/css/fonts.css
+++ b/css/fonts.css
@@ -24,7 +24,9 @@ p {
     line-height: 1.5;
     color: var(--clr-primary-400);
 }
-
+li {
+    line-height: 1.5;
+}
 h1, h2, h3, h4, h5 {
     font-weight: 400;
     line-height: 1.5;
