--- a/css/styles.css
+++ b/css/styles.css
@@ -135,9 +135,10 @@ button:active {
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-self: flex-start;
     justify-content: center;
     aspect-ratio: 900/675;
-    width: 70%;
+    width: 100%;
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
