--- a/css/fonts.css
+++ b/css/fonts.css
@@ -1,6 +1,4 @@
 @import url('https://fonts.googleapis.com/css2?family=Cutive+Mono&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Mate&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@100&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Della+Respira&display=swap');
 
 @font-face {
@@ -30,7 +28,7 @@ li {
 h1, h2, h3, h4, h5 {
     font-weight: 400;
     line-height: 1.5;
-    font-family: 'Abril Fatface';
+    font-family: 'Palatino';
     color: var(--clr-primary-400);
 }
 h1.hero-name {
@@ -45,15 +43,13 @@ h1.cursive-heading {
     font-weight: lighter;
     color: var(--clr-primary-400);
 }
-.white-font {
-    color: var(--clr-primary-400);
+h1.cursive-heading.white {
+    color: var(--clr-primary-200);
 }
-h1.cursive-heading.white-font {
-    font-size: 5.5rem;
-    font-family: 'Southam Demo';
-    font-weight: lighter;
-    color: var(--clr-primary-400);
+.white {
+    color: var(--clr-primary-200);
 }
+
 h1 {
   margin-top: 0;
   font-size: 4.209rem;
