--- a/css/hero.css
+++ b/css/hero.css
@@ -5,14 +5,21 @@
     height: 65vh;
     position: relative;
     align-items: center;
+    z-index: -15;
 } 
 #home p {
     font-size: 1.75rem;
 }
-#home p.subheading {
-    font-size: 1.5rem;
+#home h2 {
+    text-align: center;
 }
-
+.down-arrow {   
+    width: 50px;
+    position: fixed;
+    align-self: center;
+    top: 75vh;
+    z-index: -15;
+}
 #home .hero {
     display: flex;
     position: fixed;
@@ -20,18 +27,18 @@
     max-width: 1200px;
     flex-direction: column;
     justify-content: flex-start;
-    align-items: flex-start;
+    align-items: center;
     z-index: -10;
 }
 
 @media screen and (max-width:820px) {
     #home .hero {
-        width: 70%;
+        width: 85%;
     }
 }
 @media screen and (max-width:480px) {
     #home {
-        height: 60vh;
+        height: 70vh;
     }
     #home h1.hero-name {
         font-size: 6rem;
@@ -39,5 +46,8 @@
     }
     #home h2 {
         font-size: 1.777rem;
+    }
+    .down-arrow {
+        top: 75vh;
     }
 }
