--- a/css/nav.css
+++ b/css/nav.css
@@ -6,7 +6,7 @@ nav {
     justify-content: center;
     top: 0;
     height: 15vh;
-    z-index: 1;  
+    z-index: 20;  
     transition: all .5s ease-in-out 0s;
 }
 nav .container {
@@ -33,7 +33,7 @@ nav .container ul li {
     transition: background-color 0.2s ease-in-out;
 }
 nav .container ul li:hover {
-    background-color: var(--clr-primary-400);
+    background-color: var(--clr-primary-300);
     border-radius: 5px;
 }
 nav .container ul li a {
@@ -49,15 +49,32 @@ nav .container ul li a:hover {
 }
 nav .container ul li.active {
     /* Hover button */
-    background-color: var(--clr-primary-400); 
+    background-color: var(--clr-primary-300); 
     border-radius: 5px;
 }
 nav .container ul li.active a {
     /* Hover button text color */
     color: white;
 }
+.wave-nav {
+    aspect-ratio: 900/250;
+    filter: drop-shadow(0 -1px 15px var(--clr-primary-300));    
+    width: 100vw;
+    position: absolute; 
+    top: 0;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    z-index: -10;
+    background-image: url('../wave-nav.svg');
+}
 
-
+@media screen and (max-width:820px) {
+    .wave-nav {
+        height: 45vh;
+    }
+    
+}
 @media screen and (max-width:480px) {
     nav ul {
         display: none;
