--- a/css/projects.css
+++ b/css/projects.css
@@ -2,11 +2,12 @@
 /*                          PROJECTS                        */
 /* =========================================================*/
 #projects {
-    background-color: var(--clr-primary-200);
+    background-color: var(--clr-primary-300);
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
     height: auto;
+    z-index: 15;
 }
 
 .projectContainer {
@@ -33,9 +34,10 @@
     width: fit-content;
     padding: 10px;
     margin: 0;
-    background-color: var(--clr-primary-400);
+    /* background-color: var(--clr-primary-400); */
+    border: var(--clr-primary-400) 1px solid;
     text-decoration: none;
-    color: var(--clr-primary-200);
+    color: var(--clr-primary-400);
     border-radius: 5px;
     transition: background-color .2s ease-in-out,
                 transform .2s ease-in-out;
@@ -45,6 +47,7 @@
     transform: translateY(-4px);
     filter: drop-shadow(1px 2px 4px #c3c3c3);
     color: var(--clr-primary-900);
+    border: none;
 }
 .projectCard a:active {
     transform: translateY(4px);
@@ -74,9 +77,49 @@
     margin-right: 1rem;
 }
 
+.wave-top {
+    aspect-ratio: 900/110;
+    filter: drop-shadow(0 -1px 15px var(--clr-primary-300));    
+    width: 100vw;
+    height: auto;
+    margin: 0;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    background-image: url('../wave-top.svg');
+    z-index: 10;
+}
+.wave-line {
+    aspect-ratio: 900/100;
+    width: 100vw;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    background-image: url('../wave-line.svg');
+}
+.white-bg {
+    background-color: var(--clr-primary-200);
+}
+.wave-bottom {
+    aspect-ratio: 900/110;
+    filter: drop-shadow(0 -1px 15px var(--clr-primary-300));    
+    width: 100vw;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    background-image: url('../wave-bottom.svg');
+    z-index: 10;
+}
 @media screen and (max-width:820px) {
+    .projectCard {
+        width: 500px;
+        margin: 1rem 0;
+    }
 }
 
 @media screen and (max-width:480px) {
-
+    .projectCard {
+        margin: 0;
+        height: fit-content;
+    }
 }
