animate down arrow btn

--- a/css/fonts.css
+++ b/css/fonts.css
@@ -17,6 +17,10 @@
 /* =========================================================*/
 /*                         TYPE SCALE                       */
 /* =========================================================*/
+
+a {
+    font-family: 'Palatino';
+}
 p {
     margin-bottom: 1rem;
     line-height: 1.5;
