--- a/css/about.css
+++ b/css/about.css
@@ -25,7 +25,9 @@
 #about h4 {
     margin-bottom: .75rem;
 }
-
+#about li {
+    list-style-type:circle;
+}
 @media screen and (max-width:820px) {
     #about h1.cursive-heading {
         font-size: 4.209rem;
