--- a/css/projects.css
+++ b/css/projects.css
@@ -8,6 +8,7 @@
     align-items: center;
     height: auto;
     z-index: 15;
+    overflow-x: hidden;
 }
 
 .projectContainer {
@@ -18,6 +19,7 @@
     max-width: 1200px;
     width: 100%;
     height: fit-content;
+    overflow-y: hidden;
 }
 .projectCard { 
     display: flex;
@@ -35,9 +37,9 @@
     padding: 10px;
     margin: 0;
     /* background-color: var(--clr-primary-400); */
-    border: var(--clr-primary-400) 1px solid;
+    border: var(--clr-primary-200) 1px solid;
     text-decoration: none;
-    color: var(--clr-primary-400);
+    color: var(--clr-primary-200);
     border-radius: 5px;
     transition: background-color .2s ease-in-out,
                 transform .2s ease-in-out;
@@ -80,8 +82,8 @@
 .wave-top {
     aspect-ratio: 900/110;
     filter: drop-shadow(0 -1px 15px var(--clr-primary-300));    
-    width: 100vw;
-    height: auto;
+    width: 100%;
+    height: 100%;
     margin: 0;
     background-repeat: no-repeat;
     background-position: center;
@@ -99,6 +101,7 @@
 }
 .white-bg {
     background-color: var(--clr-primary-200);
+    padding-bottom: 1rem;
 }
 .wave-bottom {
     aspect-ratio: 900/110;
