--- a/css/styles.css
+++ b/css/styles.css
@@ -113,8 +113,6 @@ section {
     opacity: 1;
 }
 
-
-
 /* =========================================================*/
 /*                        MEDIA QUERIES                     */
 /* =========================================================*/
@@ -128,21 +126,17 @@ section {
         width: 80%;
     } 
 }
-
 /* Tablet */
 @media screen and (max-width:820px) {
     section {
         padding: 0 12vw;
-    }
-
-    
+    }   
 }
 /* iPhone */
 @media screen and (max-width:480px) {
     section {
-        padding: 0 10vw;
+        padding: 0 2rem;
     }
-    
 }
 
 
