--- a/css/nav.css
+++ b/css/nav.css
@@ -76,6 +76,9 @@ nav .container ul li.active a {
     
 }
 @media screen and (max-width:480px) {
+    nav .container {
+        margin: 0 2rem;
+    }
     nav ul {
         display: none;
     }
