--- a/css/projects.css
+++ b/css/projects.css
@@ -79,18 +79,22 @@
     margin-right: 1rem;
 }
 
-.wave-top {
+img.wave-top {
+    filter: drop-shadow(0 -1px 15px var(--clr-primary-300));    
+}
+/* .wave-top {
     aspect-ratio: 905/105;
+    position: absolute;
+    top: -200px;
     filter: drop-shadow(0 -1px 15px var(--clr-primary-300));    
     width: 100%;
-    height: 100%;
     margin: 0;
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
     background-image: url('../wave-top.svg');
-    z-index: 10;
-}
+    z-index: 15;
+} */
 .wave-line {
     aspect-ratio: 900/100;
     width: 100vw;
