--- a/css/projects.css
+++ b/css/projects.css
@@ -79,7 +79,8 @@
     margin-right: 1rem;
 }
 
-img.wave-top {
+img.wave-top,
+img.wave-bottom {
     filter: drop-shadow(0 -1px 15px var(--clr-primary-300));    
 }
 /* .wave-top {
