--- a/css/fonts.css
+++ b/css/fonts.css
@@ -64,3 +64,8 @@ h2 {font-size: 3.157rem;}
 h3 {font-size: 2.369rem;}
 
 h4 {font-size: 1.777rem;}
+
+h5 {
+    font-size: 1.333rem;
+    margin: 0 0 1rem 0;
+}
