--- a/css/contact.css
+++ b/css/contact.css
@@ -12,8 +12,8 @@
 #contact {
     flex-direction: column;
     justify-content: flex-start;
-    align-items: center;
-    height: 68vh;
+    align-items: flex-start;
+    height: 70vh;
     background-color: var(--clr-primary-200);
 }
 
@@ -44,6 +44,7 @@
     display: flex; 
     position: relative;
     width: 100%;
+
     max-width: 40vw;
     justify-content: flex-start;
     flex-direction: column;
@@ -56,6 +57,10 @@
     width: 100%;
     height: 2rem;
     border-style: none;
+}
+#contact form input:focus,
+#contact form textarea:focus {
+    outline: none;
 }
 #contact form textarea {
     height: 5rem;
@@ -71,11 +76,13 @@
     width: fit-content;
     z-index: 10;
 }
-
+/* ===================================================== */
 @media screen and (max-width:820px) {
     #contact {
         height: auto;
-        padding: 4rem;
+    }
+    #contact form {
+        max-width: 70%;
     }
     #contact form input,
     #contact form textarea {
@@ -83,6 +90,11 @@
     }
 }
 @media screen and (max-width:480px) {
+    #contact .subheading {
+        line-height: 1;
+        font-size: 3.157rem;
+        margin-bottom: 2rem;
+    }
     #contact {
         height: 68vh;
         padding: 2rem;
