--- a/css/footer.css
+++ b/css/footer.css
@@ -47,6 +47,7 @@ footer .icons .icon a img:hover {
 footer .icons .icon a {
     transition: filter 0.2s ease-in-out;
 }
+/* ===================================================== */
 @media screen and (max-width:820px) {
     .wave-footer {
         height: 150%;
