--- a/css/hero.css
+++ b/css/hero.css
@@ -7,14 +7,8 @@
     align-items: center;
     z-index: -15;
 } 
-#home p {
-    font-size: 1.75rem;
-}
-#home h2 {
-    text-align: center;
-}
+
 .down-arrow { 
-    
     width: 50px;
     position: fixed;
     align-self: center;
@@ -26,11 +20,9 @@
     0% {
         transform: translateY(-20%);
       }
-    
       50% {
         transform: translateY(20%);
       }
-    
       100% {
         transform: translateY(-20%);
       }
@@ -38,29 +30,37 @@
 #home .hero {
     display: flex;
     position: fixed;
-    width: 50%;
+    width: 100%;
     max-width: 1200px;
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
     z-index: -10;
 }
-
+#home #name {
+    font-family: 'Mungo';
+    font-size: 10rem;
+    line-height: 1;
+}
+#home #title {
+    text-align: center;
+}
+/* ===================================================== */
 @media screen and (max-width:820px) {
+    #home {
+        height: 75vh;
+    }
     #home .hero {
         width: 85%;
     }
 }
 @media screen and (max-width:480px) {
-    #home {
-        height: 70vh;
+    #home #name {
+        font-size: 5rem; 
     }
-    #home h1.hero-name {
-        font-size: 6rem;
-        line-height: 1.5;
-    }
-    #home h2 {
-        font-size: 1.777rem;
+    #home #title {
+        /* h3 desktop --> h4 on mobile */
+        font-size: 1.333rem;
     }
     .down-arrow {
         top: 75vh;
