--- a/css/nav.css
+++ b/css/nav.css
@@ -40,10 +40,10 @@ nav .container ul li:hover {
 nav .container ul li a {
     letter-spacing: 2px;
     display: inline-block;
-    padding: 10px 20px;
+    padding: 8px 16px;
     color: var(--clr-primary-900);
     text-decoration: none;
-    text-transform: uppercase;
+    width: fit-content;
 }
 nav .container ul li a:hover {
     color: white;
@@ -69,6 +69,7 @@ nav .container ul li.active a {
     z-index: -10;
     background-image: url('../wave-nav.svg');
 }
+/* ===================================================== */
 
 @media screen and (max-width:820px) {
     .wave-nav {
