--- a/css/projects.css
+++ b/css/projects.css
@@ -23,9 +23,9 @@
 }
 .projectCard { 
     display: flex;
-    width: 320px;
-    height: 575px;
-    padding: 1rem;
+    width: 350px;
+    height: fit-content;
+    padding: 2rem;
     margin: 1rem;
     flex-direction: column;
     justify-content: flex-start;
@@ -80,6 +80,7 @@
     justify-content: flex-start;
 }
 .projectCard .project-btns a {
+
     margin-right: 1rem;
 }
 
@@ -117,6 +118,7 @@
     background-image: url('../wave-bottom.svg');
     z-index: 10;
 }
+/* ===================================================== */
 @media screen and (max-width:820px) {
     .projectCard {
         width: 450px;
