--- a/css/styles.css
+++ b/css/styles.css
@@ -20,7 +20,6 @@
 *::after {
     box-sizing: border-box;
 }
-
 html {
     font-family: var(--ff-primary);
     font-size: 1rem;
@@ -91,7 +90,7 @@ section {
     justify-content: center;
     height: 100vh;
     width: 100%; 
-    padding: 0 15vw 0 15vw;
+    padding: 0 10vw;
 }
 
 /* =========================================================*/
@@ -113,13 +112,11 @@ section {
 /* =========================================================*/
 
 /* Wide Screen */
-@media screen and (min-width: 1400px) {
-    .wide {
-        max-width: 1200px;
-    } 
-    #contact .wide .left img {
-        width: 80%;
-    } 
+@media screen and (min-width:1920px) {
+    section {
+        padding: 0 20rem;
+    }
+
 }
 /* Tablet */
 @media screen and (max-width:820px) {
