organized svg files into folder

--- a/css/footer.css
+++ b/css/footer.css
@@ -10,7 +10,7 @@
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-    background-image: url('../wave-footer.svg');
+    background-image: url('../svg/wave-footer.svg');
 }
 
 footer { 
