--- a/css/contact.css
+++ b/css/contact.css
@@ -7,7 +7,7 @@
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-    background-image: url('../wave-line2.svg');
+    background-image: url('../svg/wave-line2.svg');
 }
 #contact {
     flex-direction: column;
