--- a/css/about.css
+++ b/css/about.css
@@ -44,6 +44,16 @@
     fill: var(--clr-primary-300);
 }
 /* ===================================================== */
+/* Wide Screen */
+@media screen and (min-width:1920px) {
+    
+    #about .aboutMeContent, 
+    #about h2,
+    #about form {
+        max-width: 1200px;
+    }
+
+}
 @media screen and (max-width:820px) {
     #about {
         padding: 1rem 5rem;
