--- a/css/contact.css
+++ b/css/contact.css
@@ -44,7 +44,6 @@
     display: flex; 
     position: relative;
     width: 100%;
-
     max-width: 40vw;
     justify-content: flex-start;
     flex-direction: column;
@@ -70,6 +69,8 @@
 #contact form textarea {
     padding: 10px; 
     margin: 1rem 0;
+    border: .5px var(--clr-primary-300) solid;
+    border-radius: 5px;
 }
 #contact form button {
     margin: 1rem 0 0 0;
