--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,7 @@
 /* =========================================================*/
 
 :root {
-    --clr-primary-200: #f4f0f0;
+    --clr-primary-200: #ffffff;
     --clr-primary-300: #879294;
     --clr-primary-400: #5e5e5e;
     --clr-primary-900: #343536;
@@ -101,7 +101,7 @@ section {
 /* Wide Screen */
 @media screen and (min-width:1920px) {
     section {
-        padding: 0 20rem;
+        padding: 0 25rem;
     }
 
 }
