changed contact height to 50vh

--- a/css/contact.css
+++ b/css/contact.css
@@ -80,7 +80,7 @@
 /* ===================================================== */
 @media screen and (max-width:820px) {
     #contact {
-        height: auto;
+        height: 50vh;
     }
     #contact form {
         max-width: 70%;
