--- a/css/contact.css
+++ b/css/contact.css
@@ -44,7 +44,7 @@
     display: flex; 
     position: relative;
     width: 100%;
-    max-width: 40vw;
+    max-width: 750px;
     justify-content: flex-start;
     flex-direction: column;
 }
@@ -81,9 +81,6 @@
 @media screen and (max-width:820px) {
     #contact {
         height: 50vh;
-    }
-    #contact form {
-        max-width: 70%;
     }
     #contact form input,
     #contact form textarea {
