--- a/css/footer.css
+++ b/css/footer.css
@@ -6,7 +6,7 @@
     width: 100vw;
     position: absolute; 
     bottom: 0;
-    z-index: 8;
+    z-index: 0;
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -48,6 +48,12 @@ footer .icons .icon a {
     transition: filter 0.2s ease-in-out;
 }
 /* ===================================================== */
+
+@media screen and (min-width:1920px) {
+    .wave-footer {
+        aspect-ratio: 900/125;
+    }
+} 
 @media screen and (max-width:820px) {
     .wave-footer {
         height: 150%;
