--- a/css/fonts.css
+++ b/css/fonts.css
@@ -35,6 +35,7 @@ p {
     line-height: 1.5;
     color: var(--clr-primary-400);
     font-family: 'Source Code Pro', monospace;
+    font-family: ;
 }
 li {
     line-height: 1.5;
