updated color theme to gradient

--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,7 @@
 
 :root {
     --clr-primary-200: #ffffff;
-    --clr-primary-300: #879294;
+    --clr-primary-300: #cecac5;
     --clr-primary-400: #5e5e5e;
     --clr-primary-900: #343536;
 }
