--- a/css/hero.css
+++ b/css/hero.css
@@ -2,7 +2,7 @@
 /*                           HOME                           */
 /* =========================================================*/
 #home {
-    height: 65vh;
+    height: 85vh;
     position: relative;
     align-items: center;
     z-index: -15;
@@ -29,7 +29,7 @@
   }
 #home .hero {
     display: flex;
-    position: fixed;
+    /* position: fixed; */
     width: 100%;
     max-width: 1200px;
     flex-direction: column;
@@ -44,6 +44,7 @@
 }
 #home #title {
     text-align: center;
+    font-size: 2rem;
 }
 /* ===================================================== */
 @media screen and (max-width:820px) {
@@ -51,12 +52,15 @@
         height: 75vh;
     }
     #home .hero {
-        width: 85%;
+        width: 90%;
+    }
+    #home #name {
+        font-size: 8rem;
     }
 }
 @media screen and (max-width:480px) {
     #home #name {
-        font-size: 5rem; 
+        font-size: 4.5rem; 
     }
     #home #title {
         /* h3 desktop --> h4 on mobile */
