--- a/css/nav.css
+++ b/css/nav.css
@@ -30,12 +30,13 @@ nav .container ul {
     list-style: none;
 }
 nav .container ul li {
+    margin: 0 0.25rem;
     display: inline-block;
-    transition: background-color 0.2s ease-in-out;
+    transition: all 0.2s ease-in-out;
 }
 nav .container ul li:hover {
     background-color: var(--clr-primary-300);
-    border-radius: 5px;
+    border-radius: 3px;
 }
 nav .container ul li a {
     letter-spacing: 2px;
@@ -46,12 +47,13 @@ nav .container ul li a {
     width: fit-content;
 }
 nav .container ul li a:hover {
-    color: white;
+    color: var(--clr-primary-200);
 }
 nav .container ul li.active {
     /* Hover button */
     background-color: var(--clr-primary-300); 
-    border-radius: 5px;
+    border-radius: 3px;
+    border: 1px solid var(--clr-primary-200);
 }
 nav .container ul li.active a {
     /* Hover button text color */
@@ -75,9 +77,7 @@ nav .container ul li.active a {
     .wave-nav {
         aspect-ratio: 900/300;
     }
-
 }
-
 @media screen and (max-width:820px) {
     .wave-nav {
         height: 20vh;
