--- a/css/projects.css
+++ b/css/projects.css
@@ -2,13 +2,15 @@
 /*                          PROJECTS                        */
 /* =========================================================*/
 #projects {
-    background-color: var(--clr-primary-300);
+    /* background-color: var(--clr-primary-300); */
+    background: linear-gradient(180deg, white, var(--clr-primary-300), white);
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
     height: auto;
     z-index: 15;
     overflow-x: hidden;
+    padding: 3rem 0;
 }
 
 .projectContainer {
@@ -27,14 +29,14 @@
     width: 350px;
     height: fit-content;
     padding: 2rem;
-    margin: 1rem;
+    margin: 0.5rem;
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-start;
     position: relative;
-    background-color: rgba(255, 255, 255, .15);
+    background-color: rgba(255, 255, 255, .25);
     backdrop-filter: blur(5px);
-    border-radius: 5px;
+    border-radius: 3px;
 }
 
 .projectCard a {
@@ -44,20 +46,19 @@
     margin: 0;
     text-align: center;
     /* background-color: var(--clr-primary-400); */
-    border: var(--clr-primary-200) 1px solid;
+    border: var(--clr-primary-400) 1px solid;
     text-decoration: none;
-    color: var(--clr-primary-200);
-    border-radius: 5px;
+    color: var(--clr-primary-400);
+    border-radius: 3px;
     transition: background-color .2s ease-in-out,
         transform .2s ease-in-out;
 }
 
 .projectCard a:hover {
-    background-color: white;
+    /* background-color: white; */
     transform: translateY(-4px);
-    filter: drop-shadow(1px 2px 4px #c3c3c3);
+    filter: drop-shadow(1px 2px 4px var(--clr-primary-400));
     color: var(--clr-primary-900);
-    border: none;
 }
 
 .projectCard a:active {
@@ -122,14 +123,14 @@
 /* ===================================================== */
 @media screen and (max-width:820px) {
     .projectCard {
-        width: 450px;
+        width: 500px;
         height: auto;
-        margin: 1rem 0;
+        margin: 1rem 1.5rem;
+        padding: 1.5rem;
     }
 }
 @media screen and (max-width:480px) {
     .projectCard {
-        padding: 1rem;
         height: fit-content;
     }
 }
