--- a/css/about.css
+++ b/css/about.css
@@ -27,31 +27,47 @@
 }
 #about li {
     list-style-type:circle;
+}
+.skills-container {
+    overflow: hidden;
+    display: flex;
+    max-width: 1200px;
+    width: 100vw;
     
 }
-#about .skills {
-    display: flex;
-
-    flex-wrap: wrap;
+.blur {
+    position: absolute; 
+    width: 100%; 
+    height: 100%;
+    box-shadow: inset 3px 3px 10px 0 #000000;
+    top: 0; 
+    left: 0;
 }
-
-#about .skills svg {
+.skills {
+    display: flex;
+    justify-content: space-around;
+    animation: marquee 15s linear infinite;
+    margin: 2rem 0 0 0;
+}
+@keyframes marquee {
+	0%   { transform: translateX(-100%); }
+	100% { transform: translateX(0%); }
+}
+.skills svg {
     width: 36px;
     margin: 1rem;
 }
-#about .skill-icon {
+.skill-icon {
     fill: var(--clr-primary-300);
 }
 /* ===================================================== */
 /* Wide Screen */
 @media screen and (min-width:1920px) {
-    
     #about .aboutMeContent, 
     #about h2,
     #about form {
         max-width: 1200px;
     }
-
 }
 @media screen and (max-width:820px) {
     #about {
@@ -60,8 +76,10 @@
     #about h1.cursive-heading {
         font-size: 4.209rem;
     }
+    .skills-container {
+        width: 100vw;
+    }
 }
-
 @media screen and (max-width:480px) {
     #about {
         padding: 1rem 2rem;
@@ -69,12 +87,14 @@
     #about h3 {
         margin: 1rem 0;
     }
-    #about .skills {
+    
+    /* .skills {
         align-items: center;
         justify-content: center;
+        width: 100%;
     }
-    #about .skills svg {
-        width: 45px;align-self: center;
+    .skills svg {
+        align-self: center;
     }
-    
+     */
 }
