--- a/css/projects.css
+++ b/css/projects.css
@@ -1,9 +1,15 @@
 /* =========================================================*/
 /*                          PROJECTS                        */
 /* =========================================================*/
+main {
+    display: flex;
+    flex-direction: column;
+    min-height: 80vh;
+    padding: 0 10vw;
+}
 #projects {
     /* background-color: var(--clr-primary-300); */
-    background: linear-gradient(180deg, white, var(--clr-primary-300), white);
+    /* background: linear-gradient(180deg, white, var(--clr-primary-300), white); */
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
