--- a/css/fonts.css
+++ b/css/fonts.css
@@ -50,6 +50,7 @@ h1, h2, h3, h4, h5, a, button, form {
     font-family: 'Mungo';
     font-weight: lighter;
     color: var(--clr-primary-400);
+    line-height: 1;
 }
 h1 {
   margin-top: 0;
