--- a/css/projects.css
+++ b/css/projects.css
@@ -8,8 +8,6 @@ main {
     padding: 0 10vw;
 }
 #projects {
-    /* background-color: var(--clr-primary-300); */
-    /* background: linear-gradient(180deg, white, var(--clr-primary-300), white); */
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
@@ -18,7 +16,9 @@ main {
     overflow-x: hidden;
     padding: 3rem 0;
 }
-
+#projects h1 {
+    margin: 0 0 2rem 0;
+}
 .projectContainer {
     display: flex;
     flex-wrap: wrap;
@@ -29,7 +29,6 @@ main {
     height: fit-content;
     overflow-y: hidden;
 }
-
 .projectCard {
     display: flex;
     width: 350px;
@@ -44,7 +43,6 @@ main {
     backdrop-filter: blur(5px);
     border-radius: 3px;
 }
-
 .projectCard a, main a {
     /* Make button as wide as text inside it */
     width: 100px;
@@ -59,7 +57,6 @@ main {
     transition: background-color .2s ease-in-out,
         transform .2s ease-in-out;
 }
-
 .projectCard a {
     position: absolute;
     bottom: 2rem;
