--- a/css/contact.css
+++ b/css/contact.css
@@ -16,7 +16,9 @@
     height: 70vh;
     background-color: var(--clr-primary-200);
 }
-
+#contact h3 {
+    margin: 3rem 0 2rem 0;
+}
 #contact a {
     background-color: var(--clr-primary-400);
     width: fit-content;
@@ -94,7 +96,7 @@
         margin-bottom: 2rem;
     }
     #contact {
-        height: 68vh;
+        height: 75vh;
         padding: 2rem;
     }
     #contact h1 {
