--- a/css/projects.css
+++ b/css/projects.css
@@ -5,7 +5,29 @@ main {
     display: flex;
     flex-direction: column;
     min-height: 80vh;
-    padding: 0 10vw;
+    height: auto;
+    padding: 0 10vw 20vh 10vw;
+}
+main .project-page {
+    margin: 1rem 0 1rem 0;
+}
+main ul {
+    margin-left: 3rem;
+}
+main h4 {
+    margin: 1rem 0;
+}
+main .screenshots {
+    display: flex;
+    width: 100%; 
+    justify-content: space-between;
+}
+main img  {
+    width: 25%; 
+    margin: 0.5rem;
+    object-fit: contain;
+    height: 160px;
+    border-radius: 3px;
 }
 #projects {
     flex-direction: column;
@@ -16,8 +38,8 @@ main {
     overflow-x: hidden;
     padding: 3rem 0;
 }
-#projects h1 {
-    margin: 0 0 2rem 0;
+#projects h2.subheading {
+    margin: 0 0 3rem 0;
 }
 .projectContainer {
     display: flex;
@@ -32,7 +54,7 @@ main {
 .projectCard {
     display: flex;
     width: 350px;
-    height: 650px;
+    height: 700px;
     padding: 2rem;
     margin: 0.5rem;
     flex-direction: column;
@@ -43,13 +65,12 @@ main {
     backdrop-filter: blur(5px);
     border-radius: 3px;
 }
-.projectCard a, main a {
-    /* Make button as wide as text inside it */
-    width: 100px;
+.projectCard a, 
+main a {
+    width: fit-content;
     padding: 8px;
     margin: 0;
     text-align: center;
-    /* background-color: var(--clr-primary-400); */
     border: var(--clr-primary-400) 1px solid;
     text-decoration: none;
     color: var(--clr-primary-400);
@@ -61,15 +82,15 @@ main {
     position: absolute;
     bottom: 2rem;
 }
-.projectCard a:hover, main a:hover {
-    /* background-color: white; */
+.projectCard a:hover, .project-btns a:hover {
     transform: translateY(-4px);
-    filter: drop-shadow(1px 2px 4px var(--clr-primary-400));
     color: var(--clr-primary-900);
 }
 
 .projectContainer img {
     width: 100%;
+    height: 160px;
+    object-fit: cover;
     border-radius: 5px;
     transition: filter 0.5s;
     margin: 1rem 0 2rem 0;
@@ -134,6 +155,9 @@ main {
     .projectCard a {
         position: relative;
         bottom: 0;
+    }
+    .projectContainer img {
+        height: auto;
     }
 }
 @media screen and (max-width:480px) {
