--- a/css/hero.css
+++ b/css/hero.css
@@ -9,13 +9,14 @@
 } 
 
 .down-arrow { 
-    width: 50px;
-    position: fixed;
+    width: 36px;
     align-self: center;
-    top: 75vh;
+    position: absolute;
+    top: 90vh;
     z-index: -15;
     animation: MoveUpDown 1s ease infinite;
 }
+
 @keyframes MoveUpDown {
     0% {
         transform: translateY(-20%);
@@ -57,6 +58,9 @@
     #home #name {
         font-size: 8rem;
     }
+    .down-arrow {
+        top: 75vh;
+    }
 }
 @media screen and (max-width:480px) {
     #home #name {
@@ -67,6 +71,7 @@
         font-size: 1.333rem;
     }
     .down-arrow {
-        top: 75vh;
+        top: 80vh;
+        width: 30px;
     }
 }
