--- a/css/footer.css
+++ b/css/footer.css
@@ -30,6 +30,8 @@ footer #legal {
     z-index: 10;
 }
 footer .icons {
+    position: absolute;
+    bottom: 4rem;
     display: flex;
     align-items: center;
     justify-content: space-between;
